main cards gap fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,13 +124,11 @@ body {
   background: transparent;
 }
 
-
-
 .nav__item {
   margin-bottom: var(--mb-2);
 }
 
-.nav-btn{
+.nav-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,7 +138,7 @@ body {
   border-radius: 6px;
   background: transparent;
   color: var(--primary-color);
-  font-size: .75rem;
+  font-size: 0.75rem;
   font-weight: var(--font-medium);
   cursor: pointer;
   padding: 0 1.5rem;
@@ -492,8 +490,12 @@ body.dark-theme {
 }
 
 /* New */
-
+#cards {
+  display: flex;
+  justify-content: center;
+}
 .cards {
+  max-width: 1080px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 1rem;
@@ -625,7 +627,7 @@ select.form-field {
   background: #fff url("https://www.kaptest.com/static/img/blue-down-arrow.png")
     no-repeat 98% center;
 }
-.contact-section{
+.contact-section {
   padding: 10% 0;
 }
 .center-block {
@@ -741,7 +743,8 @@ select.form-field {
   box-shadow: 0px 0px 10px #00000050, 0px 0px 20px #00000050;
   height: auto;
 }
-.three-sixty-text{text-align: center;
+.three-sixty-text {
+  text-align: center;
 }
 .btn-icon {
   position: absolute;
